--- a/src/main/webapp/css/header.css
+++ b/src/main/webapp/css/header.css
@@ -14,6 +14,7 @@ a {
     height: 100px;
     box-shadow: 3px 4px 8px lightgray;
     position: fixed;
+    z-index: 100;
     display: flex;
     justify-content: space-between;
     background-color: white;
