--- a/src/main/webapp/css/login.css
+++ b/src/main/webapp/css/login.css
@@ -1,3 +1,6 @@
+body{
+    box-sizing: border-box;
+}
 .content{
     width: 100%;
     height: 1000px;
@@ -13,20 +16,83 @@
     top: 100px;
 }
 
+/* 로그인 메인 */
 .login-box{
     width: 80%;
-    height: 800px;
+    height: 1000px;
     margin: auto;
-    display: flex;
-    justify-content: center;
 }
 
 .login-title{
     width: 200px;
-    height: 150px;
+    height: 200px;
     font-size: 40px;
     font-weight: 700;
+    margin: auto;
+    /* color: ; */
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+/*로그인 입력창*/
+.login{
+    width: 500px;
+    height: 200px;
+    margin: auto;
+}
+
+.login-input{
+    width: 500px;
+    height: 45px;
+    border: 1px solid lightgray;
+    border-radius: 0.5rem;
+    margin-bottom: 15px;
+    font-size: 15px;
+    cursor: pointer;
+}
+
+.login-submit{
+    background-color: #0D6FFC;
+    border: none;
+    color: white;
+}
+
+/*회원가입 유도창*/
+.signin{
+    width: 100%;
+    height: 400px;
+    margin-top: 33px;
+}
+
+.signin-plz{
+    width: 500px;
+    height: 30px;
+    text-align: center;
+    margin: auto;
+    font-size: 20px;
+    font-weight: bolder;
+}
+
+.singin-icon{
+    width: 100%;
+    height: 80px;
+    color: #0D6FFC;
+    font-size: 80px;
+}
+
+.signin-wait{
+    margin-top: 60px;
+}
+
+.signin-ad{
+
+    font-size: 15px;
+    font-weight: normal;
+}
+
+.signin-go{
+    width: 500px;
+    height: 100px;
+    margin: auto;
 }
