--- a/src/main/webapp/css/header.css
+++ b/src/main/webapp/css/header.css
@@ -12,9 +12,9 @@ a {
 .header {
     width: 100%;
     height: 100px;
-    box-shadow: 3px 4px 8px lightgray;
+    border-bottom: 1px solid lightgray;
     position: fixed;
-    z-index: 100;
+    z-index: 200;
     display: flex;
     justify-content: space-between;
     background-color: white;
