--- a/src/main/webapp/css/mainpage.css
+++ b/src/main/webapp/css/mainpage.css
@@ -10,6 +10,12 @@
     flex-direction: column;
 }
 
+.dividing_line{
+    border-top: 1px solid lightgray;
+    top: 10px;
+    width: 80%;
+}
+
 /* 추천차량 글꼴 */
 .recommend_car_title_text{
     font-size: 30px;
@@ -28,9 +34,9 @@
 .show_recommend_car{
     margin: 20px;
     width: 275px;
-    height: 280px;
+    height: 300px;
     border-radius: 3%;
-    border: 1px solid gray;
+    border: 1px solid rgb(158, 156, 156);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -50,7 +56,7 @@
 .recommend_car_image1{
     width: 200px;
     height: 120px;
-    background-image: url(../images/추천차량사진/추천차량1.png);
+    background-image: url(../images/recommendCar_images/람보르기니\ 우라칸.png);
     background-size: 100%;
     position: absolute;
     transform: scale(1.1);
@@ -59,7 +65,7 @@
 
 /* 추천 2 차량 */
 .recommend_car_image2{
-    background-image: url(../images/추천차량사진/추천차량2.png);
+    background-image: url(../images/recommendCar_images/카니발\ 4세대.png);
     width: 200px;
     height: 100px;
     background-size: 100%;
@@ -71,7 +77,7 @@
 
 /* 추천 3 차량 */
 .recommend_car_image3{
-    background-image: url(../images/추천차량사진/추천차량3.png);
+    background-image: url(../images/recommendCar_images/EV\ 1세대.png);
     height: 95px;
     background-size: 100%;
     background-repeat: no-repeat;
@@ -82,7 +88,7 @@
 
 /* 추천 4 차량 */
 .recommend_car_image4{
-    background-image: url(../images/추천차량사진/추천차량4.png);
+    background-image: url(../images//recommendCar_images/티볼리\ 에어.png);
     background-size: 100%;
     background-repeat: no-repeat;
     margin-top: 5px;
@@ -108,10 +114,13 @@
 .show_cheap_car{
     margin: 20px;
     width: 275px;
-    height: 280px;
+    height: 300px;
     border-radius: 3%;
-    border: 1px solid gray;
+    border: 1px solid rgb(158, 156, 156);
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     position: relative;
     cursor: pointer;
 }
@@ -127,7 +136,7 @@
 
 /* 가성비 1 차량 */
 .cheap_car_image1{
-    background-image: url(../images/가성비차량사진/가성비차량1.png);
+    background-image: url(../images/cheapCar_images/2022\ 모닝.png);
     background-size: 100%;
     background-repeat: no-repeat;
     transform: scale(1.4);
@@ -137,7 +146,7 @@
 
 /* 가성비 2 차량 */
 .cheap_car_image2{
-    background-image: url(../images/가성비차량사진/가성비차량2.png);
+    background-image: url(../images/cheapCar_images/베이비\ EV9.png);
     height: 120px;
     background-size: 100%;
     background-repeat: no-repeat;
@@ -148,7 +157,7 @@
 
 /* 가성비 3 차량 */
 .cheap_car_image3{
-    background-image: url(../images/가성비차량사진/가성비차량3.png);
+    background-image: url(../images/cheapCar_images/캐스퍼\ 1.0\ 가솔린\ 블랙.png);
     height: 130px;
     background-size: 100%;
     background-repeat: no-repeat;
@@ -158,7 +167,7 @@
 
 /* 가성비 4 차량 */
 .cheap_car_image4{
-    background-image: url(../images/가성비차량사진/가성비차량4.png);
+    background-image: url(../images/cheapCar_images/캐스퍼\ 1.0\ 가솔린\ 카키.png);
     background-size: 100%;
     transform: scale(1.3);
     background-repeat: no-repeat;
@@ -182,10 +191,13 @@
 .show_old_car{
     margin: 20px;
     width: 275px;
-    height: 280px;
+    height: 300px;
     border-radius: 3%;
-    border: 1px solid gray;
+    border: 1px solid rgb(158, 156, 156);
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     position: relative;
     cursor: pointer;
 }
@@ -202,16 +214,17 @@
 
 /* Y2K 1 차량 */
 .old_car_image1{
-    background-image: url(../images/Y2K차량사진/Y2K차량1.png);
+    background-image: url(../images/oldCar_images/2011\ 마티즈.png);
     background-size: 100%;
     background-repeat: no-repeat;
     height: 130px;
     transform: scale(1.2);
+    top: -10px;
 }
 
 /* Y2K 2 차량 */
 .old_car_image2{
-    background-image: url(../images/Y2K차량사진/Y2K차량2.png);
+    background-image: url(../images/oldCar_images/EV3.png);
     height: 120px;
     background-size: 100%;
     background-repeat: no-repeat;
@@ -221,7 +234,7 @@
 
 /* Y2K 3 차량 */
 .old_car_image3{
-    background-image: url(../images/Y2K차량사진/Y2K차량3.png);
+    background-image: url(../images/oldCar_images/에쿠스\ 2세대.png);
     height: 95px;
     background-size: 100%;
     background-repeat: no-repeat;
@@ -231,7 +244,7 @@
 
 /* Y2K 4 차량 */
 .old_car_image4{
-    background-image: url(../images/Y2K차량사진/Y2K차량4.png);
+    background-image: url(../images/oldCar_images/올\ 뉴\ 마티즈.png);
     background-size: 100%;
     background-repeat: no-repeat;
     left: 35px;
@@ -256,10 +269,13 @@
 .show_popular_car{
     margin: 20px;
     width: 275px;
-    height: 280px;
+    height: 300px;
     border-radius: 3%;
-    border: 1px solid gray;
+    border: 1px solid rgb(158, 156, 156);
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     position: relative;
     cursor: pointer;
 }
@@ -275,7 +291,7 @@
 
 /* 인기 1 차량 */
 .popular_car_image1{
-    background-image: url(../images/인기차량사진/인기차량1.png);
+    background-image: url(../images/popularCar_images/K5\ 2.0.png);
     background-size: 100%;
     background-repeat: no-repeat;
     height: 130px;
@@ -286,7 +302,7 @@
 
 /* 인기 2 차량 */
 .popular_car_image2{
-    background-image: url(../images/인기차량사진/인기차량2.png);
+    background-image: url(../images/popularCar_images/스파크\ FL\ 2세대.png);
     height: 120px;
     background-size: 100%;
     background-repeat: no-repeat;
@@ -297,7 +313,7 @@
 
 /* 인기 3 차량 */
 .popular_car_image3{
-    background-image: url(../images/인기차량사진/인기차량3.png);
+    background-image: url(../images/popularCar_images/셀토스\ FL\ 2세대.png);
     height: 140px;
     background-size: 100%;
     background-repeat: no-repeat;
@@ -308,11 +324,10 @@
 
 /* 인기 4 차량 */
 .popular_car_image4{
-    background-image: url(../images/인기차량사진/인기차량4.png);
+    background-image: url(../images/popularCar_images/스타리아\ 2.2\ 디젤\ 카고.png);
     background-size: 100%;
     background-repeat: no-repeat;
     transform: scale(1.2);
     height: 125px;
     left: 30px;
-    top: 5px;
 }
