--- a/src/main/webapp/css/mainpage.css
+++ b/src/main/webapp/css/mainpage.css
@@ -3,6 +3,17 @@
     margin: 0 auto;
 }
 
+/* 차량 이미지 높이 너비 */
+img{
+    width: 200px;
+    height: 40%;
+}
+
+/* 차량정보 글박스 높이조정 */
+.recommend_car_info,.cheap_car_info,.old_car_info,.popular_car_info{
+	top: 20px;
+}
+
 /* 조건별 차 고르는 메뉴 박스 */
 .mainpage_menu{
     display: flex;
@@ -10,6 +21,7 @@
     flex-direction: column;
 }
 
+/* 구분선 */
 .dividing_line{
     border-top: 1px solid lightgray;
     top: 10px;
@@ -45,57 +57,6 @@
     cursor: pointer;
 }
 
-/* 추천 차량 4개 박스의 높이, 너비 */
-.recommend_car_image1, .recommend_car_image2, .recommend_car_image3, .recommend_car_image4{
-    width: 200px;
-    height: 40%;
-    margin: 0 auto;
-}
-
-/* 추천 1 차량 */
-.recommend_car_image1{
-    width: 200px;
-    height: 120px;
-    background-image: url(../images/recommendCar_images/람보르기니\ 우라칸.png);
-    background-size: 100%;
-    position: absolute;
-    transform: scale(1.1);
-    top: 0;
-}
-
-/* 추천 2 차량 */
-.recommend_car_image2{
-    background-image: url(../images/recommendCar_images/카니발\ 4세대.png);
-    width: 200px;
-    height: 100px;
-    background-size: 100%;
-    background-repeat: no-repeat;
-    transform: scale(1.1);
-    position: absolute;
-    top: 20px;
-}
-
-/* 추천 3 차량 */
-.recommend_car_image3{
-    background-image: url(../images/recommendCar_images/EV\ 1세대.png);
-    height: 95px;
-    background-size: 100%;
-    background-repeat: no-repeat;
-    transform: scale(1.1);
-    position: absolute;
-    top: 20px;
-}
-
-/* 추천 4 차량 */
-.recommend_car_image4{
-    background-image: url(../images//recommendCar_images/티볼리\ 에어.png);
-    background-size: 100%;
-    background-repeat: no-repeat;
-    margin-top: 5px;
-    transform: scale(1.3);
-    position: absolute;
-    top: 0;
-}
 
 /* 가성비 차량 글꼴 */
 .cheap_car_title{
@@ -125,54 +86,6 @@
     cursor: pointer;
 }
 
-/* 가성비 차량 4개 박스의 높이, 너비 */
-.cheap_car_image1, .cheap_car_image2, .cheap_car_image3, .cheap_car_image4{
-    width: 200px;
-    height: 40%;
-    margin: 0 auto;
-    position: absolute;
-    top: 0;
-}
-
-/* 가성비 1 차량 */
-.cheap_car_image1{
-    background-image: url(../images/cheapCar_images/2022\ 모닝.png);
-    background-size: 100%;
-    background-repeat: no-repeat;
-    transform: scale(1.4);
-    left: 30px;
-    top: 10px;
-}
-
-/* 가성비 2 차량 */
-.cheap_car_image2{
-    background-image: url(../images/cheapCar_images/베이비\ EV9.png);
-    height: 120px;
-    background-size: 100%;
-    background-repeat: no-repeat;
-    transform: scale(1.3);
-    left: 30px;
-
-}
-
-/* 가성비 3 차량 */
-.cheap_car_image3{
-    background-image: url(../images/cheapCar_images/캐스퍼\ 1.0\ 가솔린\ 블랙.png);
-    height: 130px;
-    background-size: 100%;
-    background-repeat: no-repeat;
-    left: 30px;
-    top: -5px;
-}
-
-/* 가성비 4 차량 */
-.cheap_car_image4{
-    background-image: url(../images/cheapCar_images/캐스퍼\ 1.0\ 가솔린\ 카키.png);
-    background-size: 100%;
-    transform: scale(1.3);
-    background-repeat: no-repeat;
-    left: 30px;
-}
 
 /* Y2K 차량 글꼴 */
 .old_car_title{
@@ -202,55 +115,6 @@
     cursor: pointer;
 }
 
-/* Y2K 박스 4개의 높이, 너비 */
-.old_car_image1, .old_car_image2, .old_car_image3, .old_car_image4{
-    width: 200px;
-    height: 40%;
-    margin: 0 auto;
-    position: absolute;
-    top: 0;
-    left: 30px;
-}
-
-/* Y2K 1 차량 */
-.old_car_image1{
-    background-image: url(../images/oldCar_images/2011\ 마티즈.png);
-    background-size: 100%;
-    background-repeat: no-repeat;
-    height: 130px;
-    transform: scale(1.2);
-    top: -10px;
-}
-
-/* Y2K 2 차량 */
-.old_car_image2{
-    background-image: url(../images/oldCar_images/EV3.png);
-    height: 120px;
-    background-size: 100%;
-    background-repeat: no-repeat;
-    transform: scale(1.1);
-    height: 125px;
-}
-
-/* Y2K 3 차량 */
-.old_car_image3{
-    background-image: url(../images/oldCar_images/에쿠스\ 2세대.png);
-    height: 95px;
-    background-size: 100%;
-    background-repeat: no-repeat;
-    top: 35px;
-    transform: scale(1.2);
-}
-
-/* Y2K 4 차량 */
-.old_car_image4{
-    background-image: url(../images/oldCar_images/올\ 뉴\ 마티즈.png);
-    background-size: 100%;
-    background-repeat: no-repeat;
-    left: 35px;
-    top: 10px;
-    height: 120px;
-}
 
 /* 인기 차량 글꼴 */
 .popular_car_title{
@@ -280,54 +144,3 @@
     cursor: pointer;
 }
 
-/* 인기 차량 4개 박스의 높이, 너비 */
-.popular_car_image1, .popular_car_image2, .popular_car_image3, .popular_car_image4{
-    width: 200px;
-    height: 40%;
-    margin: 0 auto;
-    position: absolute;
-    top: 0;
-}
-
-/* 인기 1 차량 */
-.popular_car_image1{
-    background-image: url(../images/popularCar_images/K5\ 2.0.png);
-    background-size: 100%;
-    background-repeat: no-repeat;
-    height: 130px;
-    top: -25px;
-    left: 30px;
-    transform: scale(1.3);
-}
-
-/* 인기 2 차량 */
-.popular_car_image2{
-    background-image: url(../images/popularCar_images/스파크\ FL\ 2세대.png);
-    height: 120px;
-    background-size: 100%;
-    background-repeat: no-repeat;
-    transform: scale(1.2);
-    left: 30px;
-    top: 10px;
-}
-
-/* 인기 3 차량 */
-.popular_car_image3{
-    background-image: url(../images/popularCar_images/셀토스\ FL\ 2세대.png);
-    height: 140px;
-    background-size: 100%;
-    background-repeat: no-repeat;
-    top: -20px;
-    left: 30px;
-    transform: scale(1.2);
-}
-
-/* 인기 4 차량 */
-.popular_car_image4{
-    background-image: url(../images/popularCar_images/스타리아\ 2.2\ 디젤\ 카고.png);
-    background-size: 100%;
-    background-repeat: no-repeat;
-    transform: scale(1.2);
-    height: 125px;
-    left: 30px;
-}
