--- a/src/main/webapp/css/reservation.css
+++ b/src/main/webapp/css/reservation.css
@@ -78,7 +78,7 @@
 /* 자동차 정보 박스 */
 .rv-carInfoBox-container{
     margin-left: 5%;
-    width: 60%;
+    width: 55%;
     height: 660px;
     display: flex;
     flex-direction: column;
@@ -152,11 +152,12 @@
 /* 필터 박스 */
 .rv-filterBox {
     margin-right: 5%;
-    width: 25%;
+    width: 30%;
     height: 660px;
     border-radius: 10px 10px 0px 0px;
     display: flex;
     flex-direction: column;
+    font-size: 1.5rem;
 }
 
 /* 필터 메인 박스 */
@@ -168,40 +169,51 @@
     display: flex;
     flex-direction: column;
     color: #999999;
-    font-weight: bold;
 }
 
 .rv-filterBox-Main-1 {
     width: 100%;
     height: 130px;
     padding: 10px;
-    font-size: 1.2rem;
+    font-weight: bold;
+    font-size: 1.3rem;
 }
 
 .rv-filterBox-Main-1-data{
     width: 100%;
     height: 80px;
+    font-weight: lighter;
     border-bottom: 1px solid #e1e1e1;
+	font-size: 1.1rem;
+	display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .rv-filterBox-Main-2 {
     width: 100%;
     height: 150px;
     padding: 10px;
-    font-size: 1.2rem;
+    font-weight: bold;
+    font-size: 1.3rem;
 }
 
 .rv-filterBox-Main-2-data{
     width: 100%;
     height: 100px;
     border-bottom: 1px solid #e1e1e1;
+	font-size: 1rem;
+	display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .rv-filterBox-Main-3 {
     width: 100%;
     height: 150px;
     padding: 10px;
-    font-size: 1.2rem;
+    font-weight: bold;
+    font-size: 1.3rem;
 }
 
 .rv-filterBox-Main-3-data{
@@ -214,7 +226,8 @@
     width: 100%;
     height: 140px;
     padding: 10px;
-    font-size: 1.2rem;
+    font-weight: bold;
+    font-size: 1.3rem;
 }
 
 .rv-filterBox-Main-4-data{
@@ -227,7 +240,8 @@
     width: 100%;
     height: 150px;
     padding: 10px;
-    font-size: 1.4rem;
+    font-size: 1.3rem;
+    font-weight: bold;
     background-color: #f8f8f8;
     text-align: center;
     cursor: pointer;
@@ -296,7 +310,7 @@ section .box:nth-child(2n) {background: blue;} */
 }
 
 /* 모달창-날짜시간 */
-.rentDate-modal{
+.date-modal{
     position:absolute;
     display:none;
     justify-content: center;
@@ -308,7 +322,7 @@ section .box:nth-child(2n) {background: blue;} */
     z-index: 300;
 }
 
-.rentDate-modal-body{
+.date-modal-body{
     position:absolute;
     z-index: 300;
 
