--- a/src/main/webapp/css/header.css
+++ b/src/main/webapp/css/header.css
@@ -56,6 +56,8 @@ a {
 }
 
 .hearder-nav-btn-item {
+	width: 60px;
+    height: 80px;
     font-size: 18px;
     font-weight: bold;
     color: gray;
