--- a/src/main/webapp/css/myinfoproc.css
+++ b/src/main/webapp/css/myinfoproc.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     margin: 0 auto;
-    background-color: rgb(233, 230, 230);
+    background-color: #F5F5F5;
 }
 
 .my_info_box{
@@ -30,7 +30,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-bottom: 20px;
+    padding-bottom: 70px;
 }
 
 .member_name{
@@ -59,6 +59,10 @@
 
 .member_email{
     margin-right: 10px;
+}
+
+.fa-angle-right{
+    color: gray;
 }
 
 .my_phonenum{
