내정보수정페이지, 마이페이지 수정 및 내정보수정페이지 jsp 추가, footer 수정

--- a/src/main/webapp/css/footer.css
+++ b/src/main/webapp/css/footer.css
@@ -12,16 +12,6 @@
 }
 
 
-a{
-    color: gray;
-    margin-right: 15px;
-    margin-top: 0.625rem;
-    margin-top: 1rem;
-    flex-direction: column;
-    align-items: flex-start;
-    row-gap: 0.625rem;
-    column-gap: 3.125rem;
-}
 .box1{
     display: flex;
     align-items: start;
@@ -44,6 +34,14 @@ a{
 
 .a1_font{
     font-size: .90rem;
+    color: gray;
+    margin-right: 15px;
+    margin-top: 0.625rem;
+    margin-top: 1rem;
+    flex-direction: column;
+    align-items: flex-start;
+    row-gap: 0.625rem;
+    column-gap: 3.125rem;
 }
 
 .a2_font{
@@ -100,7 +98,7 @@ a{
     display: flex;
 }
 
-.fa-brands{
+.fa-instagram, .fa-facebook, .fa-blogger, .fa-youtube{
     width: 70px;
     height: 30px;
     color: gray;
