--- a/src/main/webapp/css/myinfoproc.css
+++ b/src/main/webapp/css/myinfoproc.css
@@ -7,6 +7,8 @@
 }
 
 .my_info_box{
+    justify-content: center;
+    background-color: white;
     width: 100%;
     height: 200px;
     display: flex;
@@ -16,7 +18,7 @@
 }
 
 .my_info_text{
-    padding-top: 40px;
+    padding: 40px;
 }
 
 .my_info_main_box{
@@ -30,7 +32,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-bottom: 70px;
+    padding: 20px;
 }
 
 .member_name{
@@ -130,7 +132,8 @@
 }
 
 .fa-apple, .fa-comment-sms, .fa-n{
-    width: auto;
+    width: 16px;
+    height: 16px;
     color: grey;
 }
 
