헤더2 생성 및 추가 차량정보 수정, 로그인 후 정보 가지고 페이지로 이동하는  기능 1차 구현

--- a/src/main/webapp/css/footer.css
+++ b/src/main/webapp/css/footer.css
@@ -23,7 +23,7 @@
 .b1{
     width: 100%;
     display: flex;
-    
+    justify-content: space-between;
 }
 
 .b1_font{
@@ -71,7 +71,8 @@
 
 .b1-2{
     width: 30%;
-    
+    display: flex;
+    justify-content: right;
 }
 
 .callcenter{
