--- a/src/main/webapp/css/myinfoproc.css
+++ b/src/main/webapp/css/myinfoproc.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     margin: 0 auto;
     background-color: #F5F5F5;
+    padding-bottom: 50px;
 }
 
 .my_info_box{
@@ -33,6 +34,7 @@
     flex-direction: column;
     align-items: center;
     padding: 20px;
+    padding-bottom: 40px;
 }
 
 .member_name{
@@ -111,7 +113,6 @@
 
 
 .account_linkage{
-    padding-bottom: 50px;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -156,8 +157,28 @@
     background-color: white;
 }
 
+.logout_box{
+    display: flex;
+    justify-content: flex-end !important;
+    align-items: right;
+    width: 50%;
+    margin-top: 2.5rem !important;
+    margin: 0 auto;
+}
 
+.logout_slash{
+    margin-left: 1rem !important;
+    margin-right: 1rem !important;
+}
 
+#go_to_logout, .logout_slash, .member_out{
+    font-size: 13px;
+    color: gray;
+}
+
+#go_to_logout, .member_out{
+    cursor: pointer;
+}
 
 
 
