--- a/src/main/webapp/css/mypage.css
+++ b/src/main/webapp/css/mypage.css
@@ -104,13 +104,18 @@
 
 
 /* 렌트예약페이지 버튼 */
-.go_to_reservation{
+.go_to_reservation_btn{
     font-size: 25px;
     width: 100%;
     border: none;
     border-radius: 4px;
     cursor: pointer;
     margin-bottom: 16px;
+}
+
+.go_to_reservation_text{
+    color: black;
+    font-size: 25px;
 }
 
 /* 결제 수단 수정 박스 */
