--- a/src/main/webapp/css/mypage.css
+++ b/src/main/webapp/css/mypage.css
@@ -60,6 +60,8 @@
     flex-direction: column;
     align-items: center;
     cursor: pointer;
+    width: 30px;
+    height: 30px;
 }
 
 /* 아이콘 설정 */
