마이페이지 수정 및 내 정보 수정페이지 기능 1차 완료

--- a/src/main/webapp/css/mypage.css
+++ b/src/main/webapp/css/mypage.css
@@ -45,7 +45,7 @@
 /* 회원 렌트 이용내역 박스 */
 .member_rent_use{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     padding-bottom: 50px;
 }
 
