--- a/src/main/webapp/css/reservation.css
+++ b/src/main/webapp/css/reservation.css
@@ -44,7 +44,7 @@
 /* 지역 박스 */
 .rv-locationAndDateBox-location {
 	margin-left: 6%;
-	width: 20%;
+	width: 45%;
 	height: 45px;
 	border-radius: 5px;
 	background-color: #F2F3F3;
@@ -53,7 +53,7 @@
 
 /* 날짜 박스 */
 .rv-locationAndDateBox-date {
-	width: 53%;
+	width: 28%;
 	height: 45px;
 	border-radius: 5px;
 	background-color: #F3F3F3;
@@ -121,7 +121,7 @@
 
 .rv-carInfoBox-Box-imgBox {
 	width: 50%;
-	padding: 10px;
+	padding: 20px;
 	border-radius: 10px;
 	background-color: white;
 	display: flex;
@@ -169,8 +169,35 @@
 	color: #444444;
 }
 
-.rv-carInfoBox-Box-sumRentAndInsurancePrice1 {
-	
+.rv-carInfoBox-Box-sumRentAndInsurancePrice {
+	width: 100%;
+	height: 20%;
+	border: 1px solid black;
+	display: flex;
+	flex-flow: row nowrap;
+	justify-content: space-between;
+}
+
+.rv-carInfoBox-Box-insuranceText{
+	width: 30%;
+	border: 1px solid black;
+}
+
+.rv-carInfoBox-Box-sumRentAndInsurancePrice-text{
+	width: 50%;
+	border: 1px solid black;
+}
+
+.rv-carInfoBox-Box-sumRentAndInsurancePrice2 {
+	width: 100%;
+	height: 20%;
+	border: 1px solid black;
+}
+
+.rv-carInfoBox-Box-sumRentAndInsurancePrice3 {
+	width: 100%;
+	height: 20%;
+	border: 1px solid black;
 }
 
 /* 자동차 정보 박스 스크롤바 없애기 */
@@ -568,4 +595,9 @@ li {
 	/* 테두리 그림자  */
 	transform: translateY(-50%);
 	/* 모듈창열었을때 위치설정 가운데로  */
+}
+
+/* selectBox의 z-index를 다른 필터들보다 높게 설정 */
+[data-role="selectBox"] {
+    z-index: 1000; /* 적절한 숫자로 설정, 다른 필터보다 큰 값을 사용합니다. */
 }
