--- a/src/main/webapp/css/myinfoproc.css
+++ b/src/main/webapp/css/myinfoproc.css
@@ -180,11 +180,79 @@
     cursor: pointer;
 }
 
+.member_email_modal, .member_tel_modal, .member_birth_modal, .member_nickname_modal{
+    position: fixed; /* Stay in place */
+    z-index: 200; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    display: none;
+}
 
+.active {
+    display: block; /* 표시하려면 active 클래스를 추가하세요. */
+}
 
+.email_modal_body, .tel_modal_body, .birth_modal_body, .nickname_modal_body{
+    transform: translateY(30%);
+    flex-direction: column;
+    justify-content: center;
+	align-items: start;
+    width: 50%;
+    height: 400px;
+    padding: 30px 30px;
+    margin: 0 auto;
+    border: 1px solid #777;
+    border-radius: 1rem;
+    background-color: #fff;
+}
 
+.email_title, .tel_title, .nickname_title, .birth_title, .nickname_title{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    padding: 15px;
+    font-size: 25px;
+}
 
+.email_modal_main, .tel_modal_main, .birth_modal_main, .nickname_modal_main{
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    width: 70%;
+    justify-content: center;
+    align-items: center;
+    transform: translateY(60%);
+}
 
+.close_modal_btn{
+    font-weight: bold;
+    color: #777;
+    font-size:25px;
+    cursor: pointer;
+}
+
+.input_proc_email, .input_proc_tel, .input_proc_birth, .input_proc_nickname{ 
+    width: 100%;
+    height: 30px;
+    font-size: 20px;
+}
+
+.proc_btn{
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.error_text{
+    font-size: 13px;
+    color: red;
+    margin-bottom: 15px;
+}
 
 
 
