--- a/src/main/webapp/css/mypage.css
+++ b/src/main/webapp/css/mypage.css
@@ -67,11 +67,13 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	cursor: pointer;
 	width: 30px;
 	height: 30px;
 }
 
+.memeber_rating_box{
+	cursor: pointer;
+}
 /* 아이콘 설정 */
 .fa-star-half-stroke,
 .fa-list-check,
@@ -83,6 +85,14 @@
 
 .fa-triangle-exclamation {
 	color: rgb(255, 217, 0);
+}
+
+.rating_level{
+	width: 100%;
+	height: 30px;
+	text-align: center;
+	font-size: 14px;
+	font-weight: bold;
 }
 
 /*등급 모달창*/
@@ -162,10 +172,6 @@ table{
 	cursor: pointer;
 }
 
-/*이용내역 모달창*/
-.modal_use{
-	display: none;
-}
 
 /* 진행중인 렌트 내역 박스 */
 .rent_progress_box {
@@ -191,10 +197,6 @@ table{
 	font-size: 50px;
 }
 
-/* 진행중인 렌트내역이 있을때 */
-.rent_progress {
-	
-}
 
 .rent_title{
 	width: 100%;
@@ -204,6 +206,10 @@ table{
 }
 
 
+/*렌트 내역 테이블*/
+.rent_table{
+	margin-bottom: 30px;
+}
 
 /* 렌트예약페이지 버튼 */
 .go_to_reservation_btn {
