--- a/src/main/webapp/css/reservation.css
+++ b/src/main/webapp/css/reservation.css
@@ -46,9 +46,21 @@
 	margin-left: 6%;
 	width: 45%;
 	height: 45px;
-	border-radius: 5px;
+	display: flex;
+	justify-content: space-between;
+}
+
+.place{
+	width: 310px;
+	height: 100%;
 	background-color: #F2F3F3;
+	border-radius: 5px;
 	cursor: pointer;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 20px;
+	font-weight: bold;
 }
 
 /* 날짜 박스 */
