--- a/src/main/webapp/css/mainpage.css
+++ b/src/main/webapp/css/mainpage.css
@@ -2,9 +2,15 @@
     box-sizing: border-box;
 }
 
+.recommend_car_image_box, .cheap_car_image_box, .old_car_image_box, .popular_car_image_box{
+    width: 100%;
+    height: 50%;
+}
+
 .recommend_car_image, .cheap_car_image, .old_car_image, .popular_car_image{
-    width: 236px;
-    height: 164px;
+    width: 100%;
+    height: 160px;
+    padding: 20px;
 }
 
 /* 차량 이미지 높이 너비 */
@@ -14,11 +20,13 @@
 }
 
 
-
 /* 차량정보 글박스 높이조정 */
 .recommend_car_info,.cheap_car_info,.old_car_info,.popular_car_info{
-	top: 20px;
+    top: 20px;
 }
+
+
+
 
 /* 조건별 차 고르는 메뉴 박스 */
 .mainpage_menu{
