--- a/src/main/webapp/css/myinfoproc.css
+++ b/src/main/webapp/css/myinfoproc.css
@@ -29,7 +29,7 @@
     align-items: center;
 }
 
-.my_name{
+.my_id_email_box{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -37,7 +37,7 @@
     padding-bottom: 40px;
 }
 
-.member_name{
+.member_id_big{
     margin-bottom: 0;
     font-size: 25px;
 }
@@ -48,7 +48,7 @@
     font-size: 20px;
 }
 
-.my_email_id{
+.my_email_box{
     width: 50%;
     display: flex;
     align-items: center;
@@ -78,7 +78,7 @@
     padding: 10px;
 }
 
-.my_nickname{
+.my_id{
     width: 50%;
     display: flex;
     align-items: center;
@@ -86,12 +86,12 @@
     padding: 10px;
 }
 
-.go_to_member_nickname{
+.go_to_member_id{
     display: flex;
     align-items: center;
 }
 
-.member_nickname{
+.member_id{
     margin-right: 10px;
 }
 
@@ -138,7 +138,7 @@
     color: grey;
 }
 
-.go_to_apple_linkage, .go_to_naver_linkage{
+.go_to_apple_linkage, .go_to_naver_linkage, .go_to_kakao_linkage{
     width: 83px;
     height: 22px;
     font-size: 15px;
@@ -148,12 +148,18 @@
 
 }
 
-.my_email_id:hover, .my_phonenum:hover, .my_nickname:hover, .my_birthday:hover, .my_gender:hover{
+.status_text.connected{
+    font-size: 15px;
+    font-weight: bold;
+    border: 0px;
+}
+
+.my_email_box:hover, .my_phonenum:hover, .my_id:hover, .my_birthday:hover, .my_gender:hover{
     background-color: white;
     cursor: pointer;
 }
 
-.go_to_apple_linkage:hover, .go_to_naver_linkage:hover{
+.go_to_apple_linkage:hover, .go_to_naver_linkage:hover, .go_to_kakao_linkage:hover{
     background-color: white;
 }
 
@@ -180,7 +186,7 @@
     cursor: pointer;
 }
 
-.member_email_modal, .member_tel_modal, .member_birth_modal, .member_nickname_modal{
+.member_email_modal, .member_tel_modal, .member_birth_modal, .member_id_modal{
     position: fixed; /* Stay in place */
     z-index: 200; /* Sit on top */
     padding-top: 100px; /* Location of the box */
@@ -194,10 +200,11 @@
 }
 
 .active {
-    display: block; /* 표시하려면 active 클래스를 추가하세요. */
+    display: block;
 }
 
-.email_modal_body, .tel_modal_body, .birth_modal_body, .nickname_modal_body{
+
+.email_modal_body, .tel_modal_body, .birth_modal_body, .id_modal_body{
     transform: translateY(30%);
     flex-direction: column;
     justify-content: center;
@@ -211,7 +218,7 @@
     background-color: #fff;
 }
 
-.email_title, .tel_title, .nickname_title, .birth_title, .nickname_title{
+.email_title, .tel_title, .nickname_title, .birth_title, .id_title{
     display: flex;
     justify-content: space-between;
     width: 100%;
@@ -219,7 +226,7 @@
     font-size: 25px;
 }
 
-.email_modal_main, .tel_modal_main, .birth_modal_main, .nickname_modal_main{
+.email_modal_main, .tel_modal_main, .birth_modal_main, .id_modal_main{
     display: flex;
     flex-direction: column;
     margin: 0 auto;
@@ -236,7 +243,7 @@
     cursor: pointer;
 }
 
-.input_proc_email, .input_proc_tel, .input_proc_birth, .input_proc_nickname{ 
+.input_proc_email, .input_proc_tel, .input_proc_birth, .input_proc_id{ 
     width: 100%;
     height: 30px;
     font-size: 20px;
@@ -246,12 +253,20 @@
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    margin-top: 10px;
+    font-size: 15px;
 }
 
 .error_text{
     font-size: 13px;
     color: red;
     margin-bottom: 15px;
+}
+
+.modify_member_email, .modify_member_tel, .modify_member_id, .modify_member_birth{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
 }
 
 
