로그아웃 jsp 생성 및 로그아웃 기능 구현 완료, 회원정보(전번,생년월일,이메일,아이디)수정 jsp 수정

--- a/src/main/webapp/css/myinfoproc.css
+++ b/src/main/webapp/css/myinfoproc.css
@@ -184,6 +184,7 @@
 
 #go_to_logout, .member_out{
     cursor: pointer;
+    border: none;
 }
 
 .member_email_modal, .member_tel_modal, .member_birth_modal, .member_id_modal{
