--- a/src/main/webapp/css/mainpage.css
+++ b/src/main/webapp/css/mainpage.css
@@ -2,6 +2,14 @@
     box-sizing: border-box;
 }
 
+a:link { 
+	color: black; text-decoration: none;
+} 
+
+a:visited { 
+	color: black; text-decoration: none;
+} 
+
 .recommend_car_image_box, .cheap_car_image_box, .old_car_image_box, .popular_car_image_box{
     width: 100%;
     height: 50%;
